Fixing paragraph spacing for About and Contact screens.

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -211,7 +211,7 @@
   &__text {
     &--1, &--2, &--3 {
       display: block;
-      line-height: 2.8rem;
+      line-height: 2.6rem;
       color: $grey-5;
     }
 
@@ -384,11 +384,11 @@
     }
 
     &--1 {
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.75rem;
     }
 
     &--2 {
-      margin-bottom: 2.75rem;
+      margin-bottom: 2.5rem;
     }
   }
 }
